various updates to finalize new version